added check for update...

--- a/jamfStatus/index.html
+++ b/jamfStatus/index.html
@@ -175,7 +175,7 @@ a:hover
 <div>- Polling interval.</div>
 <div>- Whether the alert window is displayed at every polling interval or only when the status changes.</div>
 <div>- How the menubar icon is displayed.&nbsp; Minimizing will place a thin transparent icon in the menubar.</div>
-<div>- Use of a LaunchAgent, to automatically start the app when logging in.</div>
+<div>- Use of a LaunchAgent, to automatically start the app when logging in.*</div>
 <div>- Information for your specific Jamf Cloud instance.</div>
     <br>
 </div> 
@@ -187,10 +187,12 @@ a:hover
     <br>
     <img src="images/notifications.png" id="Image2" alt="">
             <br>
-            
+        * The LaunchAgent must be moved from ~/Library/Containers/com.jamf.pse.jamfStatus/Data/Library/LaunchAgents/ to ~/Library/LaunchAgents/ for it to function.   
+            <br>
+            <br>
 <hr id="Line1" style="left:0px;top:800px;width:603px;height:2px;z-index:8;">
             <br>
-            <div>Author: Leslie Helou</div>
+            <div>Author: Leslie N. Helou</div>
 <div><br></div>
 <div>License: Copyright 2017 Jamf Professional Services</div>
 <div><br></div>
