--- a/jamfStatus/index.html
+++ b/jamfStatus/index.html
@@ -176,7 +176,7 @@ a:hover
 <div>- Whether the alert window is displayed at every polling interval or only when the status changes.</div>
 <div>- How the menubar icon is displayed.&nbsp; Minimizing will place a thin transparent icon in the menubar.</div>
 <div>- Use of a LaunchAgent, to automatically start the app when logging in.*</div>
-<div>- Information for your specific Jamf Cloud instance.</div>
+<div>- Information for your specific Jamf Cloud instance.  If your cloud server does not utilize the HTTPS port 443 be sure to include the port you use in the URL.</div>
     <br>
 </div> 
 
